# cses

./: .gitignore  Cargo.toml  LICENSE  LICENSE.md  README.md  zed-settings
benches/: increasing_array_bench.rs  missing_number_bench.rs  number_spiral_bench.rs  permutations_bench.rs  repetitions_bench.rs  weird_algorithm_bench.rs
data/: missing_number_input.txt  repetitions_input.txt
readme/: INCREASING_ARRAY.md  MISSING_NUMBER.md  NUMBER_SPIRAL.md  PERMUTATIONS.md  REPETITIONS.md  WEIRD_ALGORITHM.md
scripts/: apple_division  bit_strings  chessboard_and_queens  coin_piles  creating_strings  digit_queries  fibonacci_number  gray_code  increasing_array  missing_number  number_spiral  palindrome_reorder  permutations  repetitions  tower_of_hanoi  trailing_zeros  two_knights  two_sets  weird_algorithm
solutions/missing_number/: Cargo.toml  README.md
solutions/missing_number/benches/: bench.rs
solutions/missing_number/src/: lib.rs  main.rs
solutions/missing_number/tests/: test.rs
solutions/weird_algorithm/: Cargo.toml  README.md
solutions/weird_algorithm/benches/: bench.rs
solutions/weird_algorithm/src/: lib.rs  main.rs  submit.rs
solutions/weird_algorithm/tests/: test.rs
src/: error.rs  increasing_array.rs  io.rs  lib.rs  missing_number.rs  number_spiral.rs  permutations.rs  prelude.rs  repetitions.rs  utils.rs  weird_algorithm.rs
tests/: increasing_array_test.rs  missing_number_test.rs  permutations_test.rs  repetitions_test.rs  weird_algorithm_test.rs
utils/: Cargo.toml
utils/src/: datafiles.rs  error.rs  io.rs  lib.rs
